fix toggle dark mode button pointer

--- a/css/style.css
+++ b/css/style.css
@@ -98,14 +98,12 @@ h5 {
   position: relative;
   transition: 0.5s ease-in-out;
   cursor: pointer;
-  /* display:flex; */
   margin: 0;
-  /* flex-wrap: wrap; */
   padding-left: 0px;
 }
 #header .nav li {
   list-style-type: none;
-  padding: 5px 10px 5px 0px;
+  padding: 5px 40px 5px 0px;
 }
 #header .nav li a {
   text-decoration: none !important;
@@ -116,7 +114,6 @@ h5 {
   z-index: 1;
   min-height: 1.5rem;
   padding-left: 50px;
-  padding-top: 10px;
 }
 .custom-control-label {
   position: relative;
@@ -129,7 +126,6 @@ h5 {
   width: 1rem;
   height: 1.25rem;
   opacity: 0;
-  cursor: pointer;
 }
 .custom-control-input:focus:checked + .custom-control-label::before {
   color: #fff;
@@ -144,6 +140,7 @@ h5 {
   width: 1.75rem;
   pointer-events: all;
   border-radius: 0.5rem;
+  cursor: pointer;
 }
 .custom-control-label::before {
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
@@ -160,11 +157,10 @@ h5 {
   border: #adb5bd solid 1px;
 }
 .custom-switch .custom-control-label::after {
-  /* top: calc(.25rem + 2px); */
   left: calc(-2.25rem + 2px);
+  cursor: pointer;
   width: calc(1rem - 4px);
   height: calc(1rem - 4px);
-  /* background-color: #adb5bd; */
   background-image: url(/img/moon.svg);
   border-radius: 0.5rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
@@ -244,7 +240,7 @@ h5 {
 .social .social-text {
   transition: all ease 0.3s;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 17px;
   padding-right: 12px;
   letter-spacing: 1px;
 }
@@ -261,6 +257,7 @@ h5 {
 }
 
 .social .fab {
+  font-size: 20px;
   padding: 0px 9px;
   -webkit-font-smoothing: antialiased;
 }
